--- a/inicio.html
+++ b/inicio.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Exalto | Marketplace</title>
+  <title>Exalto | cafés de origen</title>
 
   <style>
     :root {
@@ -41,7 +41,7 @@
     nav a {
       margin-right: 20px;
       font-weight: bold;
-      color: var(--color2);
+      color: var(--color1);
       text-decoration: none;
     }
 
@@ -77,10 +77,9 @@
       position: relative;
       cursor: pointer;
       background-color: var(--color3);
-      border-radius: 50px;
+      border-radius: 20px;
       border-color: white;
-      font-size: 20px;
-      transform: scale(1.3);
+      font-size: 30px;
     }
 
     .cart-count {
@@ -246,8 +245,8 @@
   <nav>
     <a href="inicio.html">Inicio</a>
     <a href="cafés.html">Cafés</a>
-    <button class="cart-icon" onclick="toggleCart()">🛒
-    <span id="cart-count" class="cart-count">0</span> </button>
+    <a href="kits.html">Kits</a>
+    <a href="cafés.html" class="cart-icon">🛒<span id="cart-count" class="cart-count">0</span></a>
   </nav>
 </header>
 
@@ -285,5 +284,4 @@
 
     
     </body>
-
 </html>
