--- a/cafés.html
+++ b/cafés.html
@@ -500,7 +500,7 @@
       return;
     }
 
-    let text = 'Hola, quiero pedir:%0A';
+    let text = 'Hola 👋%0AQuiero mi kit:%0A';
     let total = 0;
 
     Object.keys(cart).forEach(name => {
@@ -514,7 +514,7 @@
     text += `%0A*Total: $${total.toLocaleString('es-CO')}*`;
 
     window.open(
-      `https://wa.me/573502823060?text=${text}`,
+      `https://wa.me/573502823060?text=${text}%0A%0A¿Me confirmas la disponibilidad por favor?`,
       '_blank'
     );
   }
@@ -528,3 +528,4 @@
 
 </body>
 </html>
+
