--- a/inicio.html
+++ b/inicio.html
@@ -214,13 +214,11 @@
     }
 
     .cremas {
-     padding: 40px 0;               /* Espacio arriba y abajo */
-     display: flex;                 /* Habilita centrado */
-     justify-content: center;   
-     flex-direction: column;     /* 👈 CLAVE: uno debajo del otro */
-     align-items: center;        /* Centra horizontal */
-     gap: 2px;
-     margin: 0px 300px;
+     cursor: pointer;
+      border-radius: 16px;
+      transition: transform 0.3s ease;
+      max-width: 300px;                /* Responsive */
+      height: 300px;
     }
 
     .cremas p{
@@ -321,4 +319,5 @@
 
     
     </body>
+
 </html>
