--- a/inicio.html
+++ b/inicio.html
@@ -214,11 +214,11 @@
     }
 
     .cremas {
-     cursor: pointer;
-      border-radius: 16px;
-      transition: transform 0.3s ease;
-      max-width: 300px;                /* Responsive */
-      height: 300px;
+      max-width: 1100px;
+      margin: 10px auto;
+      padding: 0 20px;
+      display: grid;
+      place-items: center;
     }
 
     .cremas p{
@@ -321,3 +321,4 @@
     </body>
 
 </html>
+
