--- a/cafés.html
+++ b/cafés.html
@@ -500,7 +500,7 @@
       return;
     }
 
-    let text = 'Hola 👋%0AQuiero mi kit:%0A';
+    let text = 'Hola 👋%0AQuiero pedir:%0A';
     let total = 0;
 
     Object.keys(cart).forEach(name => {
@@ -528,4 +528,5 @@
 
 </body>
 </html>
+
 
